resolve issues in SearchInteractor tests